New ComparableQualityBasedProblem interface. Synthetic problem updated.